quick fix for notable person covering up text on dessy

--- a/wp/wp-content/themes/roots/custom-css/dessy-interview.css
+++ b/wp/wp-content/themes/roots/custom-css/dessy-interview.css
@@ -162,6 +162,6 @@ Desssy Interview Specific Styles
 
 @media (max-width:480px) {
     .notable-person#lindsey-goodchild{
-        margin-top: 0;
+        margin-top: 0.4em;
     }
 }
